@@ -3,5 +3,5 @@
 	An abstract type that represents an Enum.
 	See [Type] for the haXe Reflection API.
 **/
-extern class Enum {
+extern class Enum<T> {
 }
